fixed horizontal scrolling bug

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  position: relative;
+  overflow-x: hidden;
+}
+
 /* Normalize */
 body,
 h1,
